--- a/The-Horizon-Project/index.html
+++ b/The-Horizon-Project/index.html
@@ -477,10 +477,10 @@
                 <div class="client_id">
                   <div class="client_info">
                     <h6>
-                      Random Lodu
+                      Random
                     </h6>
                     <p>
-                      httt bc
+                      httt nhi deta 
                     </p>
                   </div>
                   <i class="fa fa-quote-left" aria-hidden="true"></i>
@@ -499,16 +499,16 @@
                 <div class="client_id">
                   <div class="client_info">
                     <h6>
-                      Random lodu
+                      Random
                     </h6>
                     <p>
-                      httt bd
+                      bhot mst bhaiiiiii
                     </p>
                   </div>
                   <i class="fa fa-quote-left" aria-hidden="true"></i>
                 </div>
                 <p>
-                  mkc sbkiii </p>
+                  aajd </p>
               </div>
             </div>
           </div>
